- orm
    - added a check for joining from A->B using join(), along two
      different m2m tables.  this raises an error in 0.3 but is 
      possible in 0.4 when aliases are used. [ticket:687]
    - fixed small exception throw bug in Session.merge()
- engine
    - fixed another occasional race condition which could occur
      when using pool with threadlocal setting
- mssql
    - added support for TIME columns (simulated using DATETIME) [ticket:679]
    - index names are now quoted when dropping from reflected tables [ticket:684]
      
0.3.10
- general
    - a new mutex that was added in 0.3.9 causes the pool_timeout
      feature to fail during a race condition; threads would 
      raise TimeoutError immediately with no delay if many threads 
      push the pool into overflow at the same time.  this issue has been
      fixed.
- sql
    - better quoting of identifiers when manipulating schemas
    - got connection-bound metadata to work with implicit execution
    - foreign key specs can have any chararcter in their identifiers
     [ticket:667]
    - added commutativity-awareness to binary clause comparisons to
      each other, improves ORM lazy load optimization [ticket:664]
- orm
    - cleanup to connection-bound sessions, SessionTransaction
- mysql
    - fixed issue with tables in alternate schemas [ticket:662]
- postgres
    - fixed max identifier length (63) [ticket:571]


0.3.9
- general
    - better error message for NoSuchColumnError [ticket:607]
    - finally figured out how to get setuptools version in, available
      as sqlalchemy.__version__ [ticket:428]
    - the various "engine" arguments, such as "engine", "connectable",
      "engine_or_url", "bind_to", etc. are all present, but deprecated.
      they all get replaced by the single term "bind".  you also
      set the "bind" of MetaData using 
      metadata.bind = <engine or connection>
- ext
    - iteration over dict association proxies is now dict-like, not