@@ -387,14 +387,17 @@ class MSTimeStamp(sqltypes.TIMESTAMP):
     def get_col_spec(self):
         return "TIMESTAMP"
 
-class MSYear(sqltypes.String):
+class MSYear(sqltypes.TypeEngine):
     """MySQL YEAR type, for single byte storage of years 1901-2155"""
+
+    def __init__(self, length=None):
+        self.length = length
 
     def get_col_spec(self):
         if self.length is None:
             return "YEAR"
         else:
-            return "YEAR(%d)" % self.length
+            return "YEAR(%s)" % self.length
 
 class MSText(_StringType, sqltypes.TEXT):
     """MySQL TEXT type, for text up to 2^16 characters""" 
@@ -938,6 +941,7 @@ ischema_names = {
     'tinytext' : MSTinyText,
     'varbinary' : MSVarBinary,
     'varchar' : MSString,
+    'year' : MSYear,
 }
 
 def descriptor():
