@@ -209,6 +209,34 @@ class TypesTest(AssertMixin):
         charset_table.drop()
 
     @testbase.supported('mysql')
+    def test_year(self):
+        """Exercise YEAR."""
+
+        meta = MetaData(testbase.db)
+        year_table = Table('mysql_year', meta,
+                           Column('y1', mysql.MSYear),
+                           Column('y2', mysql.MSYear),
+                           Column('y3', mysql.MSYear),
+                           Column('y4', mysql.MSYear(2)),
+                           Column('y5', mysql.MSYear(4)))
+
+        try:
+            year_table.create()
+            reflected = Table('mysql_year', MetaData(testbase.db),
+                              autoload=True)
+
+            for table in year_table, reflected:
+                table.insert(['1950', '50', None, 50, 1950]).execute()
+                row = list(table.select().execute())[0]
+                self.assert_(list(row) == [1950, 2050, None, 50, 1950])
+                table.delete().execute()
+                self.assert_(colspec(table.c.y1).startswith('y1 YEAR'))
+                self.assert_(colspec(table.c.y4) == 'y4 YEAR(2)')
+                self.assert_(colspec(table.c.y5) == 'y5 YEAR(4)')
+        finally:
+            meta.drop_all()
+
+    @testbase.supported('mysql')
     def test_enum(self):
         "Exercise the ENUM type"
 
@@ -341,6 +369,11 @@ class TypesTest(AssertMixin):
             assert isinstance(reflected.type, type(expected[i]))
 
         m.drop_all()
+
+
+def colspec(c):
+    return testbase.db.dialect.schemagenerator(
+        testbase.db, None, None).get_column_specification(c)
 
 if __name__ == "__main__":
     testbase.main()
